Make home page and card component

--- a/ecommerce-frontend/src/styles/app.scss
+++ b/ecommerce-frontend/src/styles/app.scss
@@ -39,6 +39,8 @@ $color3:rbg(0,104,136);
 
 @import "admin-styles/mixin";
 
+@import "home";
+
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
 @import "admin-styles/chart";
