--- a/ecommerce-frontend/src/styles/app.scss
+++ b/ecommerce-frontend/src/styles/app.scss
@@ -21,8 +21,8 @@ a {
 }
 
 $color1:white;
-$color2:rbg(46,46,46);
-$color3:rbg(0,104,136);
+$color2:#2E2E2E;
+$color3:#006888;
 
 
 .red {
@@ -40,6 +40,11 @@ $color3:rbg(0,104,136);
 @import "admin-styles/mixin";
 
 @import "home";
+@import "cart";
+@import "shipping";
+@import "login";
+@import "search";
+
 
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
@@ -47,6 +52,27 @@ $color3:rbg(0,104,136);
 @import "admin-styles/dashboardapp";
 @import "admin-styles/mediaquery";
 
+
+
+ .container {
+            max-width: 1367px;
+            width: 100%;
+            margin: auto;
+            overflow: auto;
+    
+            >h1 {
+                @include heading;
+                margin: 1rem 0;
+                text-align: left;
+            }
+        }
+
+
+.heading {
+    @include heading;
+    margin: 1rem 0;
+    text-align: center;
+}
 
 .header{
 
