--- a/ecommerce-frontend/src/styles/app.scss
+++ b/ecommerce-frontend/src/styles/app.scss
@@ -291,6 +291,19 @@ dialog{
         animation: loading-animation 0.5s linear infinite;
     }
 }
+.skeleton-loader {
+    display: flex;
+    flex-direction: column;
+}
+
+.skeleton-shape {
+    height: 30px;
+    width: 100%;
+    background-color: #ddd;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    animation: skeleon-loading 1.5s infinite;
+}
 
 @keyframes loading-animation {
     to {
@@ -301,5 +314,17 @@ dialog{
 @keyframes up-and-down {
     to {
         transform: translate(-50%, -20%);
+    }
+}
+
+@keyframes skeleon-loading {
+    0% {
+        opacity: 0.6;
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0.6;
     }
 }
