--- a/ecommerce-frontend/src/styles/_home.scss
+++ b/ecommerce-frontend/src/styles/_home.scss
@@ -1,33 +1,60 @@
-
-
-.home{
-    padding: 2rem 5%;
+.home {
+    padding: 1rem 5%;
     display: flex;
     flex-direction: column;
     height: calc(100vh - 4rem);
     width: 100%;
 
-    > section{
+    >section {
         width: 100%;
-        height: 18.75rem;
+        height: 16.75rem;
         margin: auto;
-         background: url(../assets/cover.jpg) no-repeat center/cover ;
-    }
-    >h1{
-        @include heading(1px);
-        margin-top: 3rem;
-        @include flex(row, space-between,center);
+        background: url("../assets/cover.jpg") no-repeat center / cover;
     }
 
-    .findmore{
-        font-size: 1rem;
+    >h1 {
+        @include heading(1px);
+        margin-top: 3rem;
+        @include flex(row, space-between, center);
     }
-    >main{
+        // .findmore {
+        //     font-size: 1.5rem;
+        // }
+                .latest-products-title {
+                    font-family: 'Arial, sans-serif';
+                    font-size: 1.5em;
+                    color: #333;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin-bottom: 15px;
+                }
+        
+                .latest-products-title .findmore {
+                    font-size: 0.8em;
+                    color: #007BFF;
+                    text-decoration: none;
+                    padding: 5px 10px;
+                    border: 1px solid #007BFF;
+                    border-radius: 6px;
+                    transition: background-color 0.3s, color 0.3s;
+                }
+        
+                .latest-products-title .findmore:hover {
+                    background-color: #007BFF;
+                    color: #fff;
+                }
+
+    >main {
         width: 100%;
         flex: 1;
         display: flex;
         gap: 1rem;
         overflow-x: auto;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
 }
 
@@ -69,7 +96,7 @@
             @include square(3rem);
             border-radius: 100%;
             border: none;
-            background-color: blue;
+            background-color: $color3;
             cursor: pointer;
             color: $color1;
             font-size: 1.1rem;
